Install cargo, git-delta, and spinner

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/benalexb/dotfiles#readme",
   "devDependencies": {
-    "eslint": "^8.27.0"
+    "eslint": "^8.27.0",
+    "zx": "^7.1.1"
   }
 }
